fix: add tailwind-easing-gradients and use for the song text overflow

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -227,33 +227,15 @@ how to remove the virtical space around the range input in IE */
 }
 
 .truncate-and-animate {
-  --opacity: 1;
-  --color: rgba(160, 174, 192, var(--opacity));
-  --from: red;
-  --to: red;
-
-  @apply rounded-lg shadow-sm;
-
-  position: relative;
-  background-image: linear-gradient(to right, var(--from), var(--to));
+  @apply rounded-lg shadow-sm bg-black relative;
 }
 
-.truncate-and-animate .fade {
-  --opacity: 0.1;
+.truncate-and-animate .fade-l {
+  @apply rounded-lg bg-easing-l-song-fade absolute top-0 left-0 w-8 h-full;
+}
 
-  @apply rounded-lg;
-
-  position: absolute;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  background-image: linear-gradient(
-    to right,
-    var(--from) 1rem,
-    transparent calc(100% - 2rem),
-    var(--to) 1rem
-  );
+.truncate-and-animate .fade-r {
+  @apply rounded-lg bg-easing-r-song-fade absolute top-0 right-0 w-8 h-full;
 }
 
 .play-history {
